# kassow_kord_driver

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  kassow_kord_driver.jazzy.repos  kassow_kord_driver.xml  package.xml
.github/workflows/: jazzy-binary-build.yml  reusable-industrial-ci-with-cache.yml
include/kassow_kord_driver/: kassow_kord_driver.hpp
kassow_kord_bringup/: CMakeLists.txt  package.xml
kassow_kord_bringup/config/: joint_limits.yaml  kassow_kord.rviz  kassow_kord_controllers.yaml  kassow_kord_dual_arm.rviz  kinematics.yaml  move_group_config.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_planning.yaml  test_goal_publishers_config.yaml
kassow_kord_bringup/launch/: kassow_kord.launch.xml  kassow_kord_bringup.launch.xml  kassow_kord_bringup_dual_arm_mock.launch.xml  kassow_kord_bringup_mock.launch.xml  kassow_kord_description.launch.xml  kassow_kord_description_dual_arm.launch.xml  kassow_kord_dual_arm_bringup_mock.xml  kassow_kord_dual_arm_cm.xml  kassow_kord_dual_arm_description.launch.xml  kassow_kord_dual_arm_moveit.launch.xml  kassow_kord_dual_arm_moveit.xml  kassow_kord_moveit.launch.xml  kassow_kord_offline.launch.xml  test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.xml  view_kr810.launch.py  view_kr810.launch.xml  view_kr810_dual_arm.launch.xml
kassow_kord_bringup/moveit_config/: joint_limits.yaml  joint_limits_dual_arm.yaml  kinematics.yaml  moveit_controllers.yaml  stomp_planning.yaml
kassow_kord_bringup/scripts/: activate_controllers.sh  activate_hardware.sh  activate_kassow_robot.bash  deactivate_dual_arm.bash  deactivate_kassow_robot.bash  scenario_controllers.yaml
kassow_kord_bringup/srdf/: kassow_kord.srdf.xacro  kassow_kord_dual_arm.srdf.xacro  kassow_kord_macro.srdf.xacro
kassow_kord_bringup/urdf/: kassow_kord.ros2_control.xacro  kassow_kord.urdf.xacro  kassow_kord_dual_arm.urdf.xacro  kassow_kord_interfaces.ros2_control.xacro
kassow_kord_bringup/urdf/common/: materials.xacro
kassow_kord_description/: CMakeLists.txt  package.xml
kassow_kord_description/kr810/urdf/: kr810_description.urdf.xacro
kassow_kord_hardware_interface/: CMakeLists.txt  kassow_kord_hardware_interface.xml  package.xml
kassow_kord_hardware_interface/include/kassow_kord_hardware_interface/: bit_helpers.hpp  kassow_kord_hardware_interface.hpp
kassow_kord_hardware_interface/src/: kassow_kord_hardware_interface.cpp
src/: kassow_kord_adapter.cpp  kassow_kord_driver.cpp
