<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kassow_kord_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for kassow kord.</description>
  <maintainer email="yara.shahin@b-robotized.com">Yara Shahin</maintainer>
  <license>Copyright (c) 2025, b-robotized</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kassow_kord_hardware_interface</depend>
  <depend>kassow_kord_description</depend>

  <exec_depend>controller_manager</exec_depend>

  <exec_depend>forward_command_controller</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
