<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kassow_kord_hardware_interface</name>
  <version>0.0.0</version>
  <description>ros2 control hardware interface for Kassow Kord Robot.</description>

  <maintainer email="nikola.banovic@b-robotized.com">Nikola Banovic</maintainer>
  <maintainer email="yara.shahin@b-robotized.com">Yara Shahin</maintainer>
  <maintainer email="denis.stogl@b-robotized.com">Denis Štogl</maintainer>

  <license>Apache-2.0</license>

  <author email="yara.shahin@b-robotized.com">Yara Shahin</author>
  <author email="nikola.banovic@b-robotized.com">Nikola Banovic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>kassow_kord_vendor</depend>

  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
